--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "node build.js",
+    "build": "[my-framework] build --output public",
     "upload": "node upload.js",
     "deploy": "npm run build && npm run upload"
   },
